src/components/admin/QuizBuilder/QuizBuilder.scss
.QuizBuilder__question {
  margin-bottom: 1rem;
}

.QuizBuilder__answer {
  margin-bottom: 0.25rem;
  position: relative;
}

.QuizBuilder__toggle {
  position: absolute;
  right: 0.3125rem;
  top: 0.3125rem;
}

.QuizBuilder__add-answer {
  opacity: 0.75;
  background: #eee;
  cursor: pointer;
  transition: opacity 200ms ease;
}

.QuizBuilder__add-answer:hover {
  opacity: 1;
}

.QuizBuilder__question .QuizBuilder__question,
.QuizBuilder__question + .QuizBuilder__add-question {
  margin-top: 1rem;
}

.toggle-check-input {
  width: 1px;
  height: 1px;
  position: absolute;
}

.toggle-check-text {
  font-size: 0.725rem;
  display: inline-block;
  position: relative;
  text-transform: uppercase;
  background: #CCC;
  padding: 0.25em 0.5em 0.25em 2em;
  border-radius: 1em;
  min-width: 2em;
  color: #FFF;
  cursor: pointer;
  transition: background-color 0.15s;
}

.toggle-check-text:after {
  content: ' ';
  display: block;
  background: #fff;
  width: 0.725rem;
  height: 0.725rem;
  border-radius: 50%;
  position: absolute;
  left: 0.3rem;
  top: 0.3125rem;
  transition: left 0.15s, margin-left 0.15s;
}

.toggle-check-text:before {
  content: 'Incorrect';
}

.toggle-check-input:checked ~ .toggle-check-text {
  background: #6fca49;
  padding-left: 0.5rem;
  padding-right: 2rem;
}

.toggle-check-input:checked ~ .toggle-check-text:before {
  content: 'Correct';
}

.toggle-check-input:checked ~ .toggle-check-text:after {
  left: 100%;
  margin-left: -1.4rem;
}

